# openshell-driver-substrate

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
cmd/kubectl-osh/: Makefile  README.md  go.mod  go.sum  main.go
cmd/kubectl-osh/cmd/: create.go  delete.go  get.go  helpers.go  root.go
cmd/kubectl-osh/internal/client/: gateway.go
cmd/kubectl-osh/internal/output/: format.go
cmd/kubectl-osh/pkg/proto/datamodel/v1/: datamodel.pb.go
cmd/kubectl-osh/pkg/proto/openshell/v1/: openshell.pb.go  openshell_grpc.pb.go
cmd/kubectl-osh/pkg/proto/sandbox/v1/: sandbox.pb.go
docs/: poc-intro.md
docs/rfcs/: 0005-sandbox-degraded-mode.md
examples/agent-substrate-demo/: Dockerfile  README.md  build-supervisor-image.sh  cleanup.sh  data.yaml  dry-run.sh
examples/agent-substrate-demo/manifests/: supervisor-template.yaml
examples/gpu-counter/: README.md  gpu-counter-agent.py  gpu-counter-data.yaml  gpu-counter-run.sh  gpu-counter-template.yaml  gpu-counter.Dockerfile  validate-bare.sh
examples/helpdesk/: .gitignore  README.md  beat6-test.sh  helpdesk-agent.py  helpdesk-data.yaml  helpdesk-run.sh  helpdesk-template.yaml  helpdesk.Dockerfile  routes.yaml
examples/helpdesk/gateway/: Dockerfile  build-image.sh  gateway-config.yaml  gateway-deployment.yaml  gateway-rbac.yaml  run.sh
proto/: README.md  ateapi.proto  datamodel.proto  openshell.proto  sandbox.proto
src/: degraded.rs  lib.rs  template.rs
tests/: live.rs
tests/integration/: Dockerfile  README.md  actor-template.yaml  build-image.sh  cluster-setup.yaml  data.yaml  run.sh  test-workload.sh
tests/integration/gateway/: Dockerfile.gateway  actor-template-with-gateway.yaml  build-gateway-image.sh  cluster-setup-with-gateway.yaml  gateway-config.yaml  gateway-deployment.yaml  gateway-secret.yaml.template  generate-jwt-keys.sh  mint-sandbox-token.py  run-gateway-integration.sh  run-gateway.sh  verify-features.sh
